--- a/src/main/resources/scena.fxml
+++ b/src/main/resources/scena.fxml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.geometry.Insets?>
+
+<StackPane prefHeight="720.0" prefWidth="1280.0"
+           xmlns="http://javafx.com/javafx/11.0.1"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="controller.Controller"
+           stylesheets="/style.css"
+>
+    <ImageView fx:id="obrazekLokace" />
+    <BorderPane>
+        <bottom>
+            <VBox alignment="CENTER" styleClass="kontejner" prefHeight="100">
+                <Label fx:id="nazevLokace" styleClass="velky-nadpis"/>
+                <Label fx:id="popisLokace" styleClass="text-velky"/>
+            </VBox>
+        </bottom>
+        <left>
+            <GridPane vgap="10">
+                <rowConstraints>
+                    <RowConstraints percentHeight="50"/>
+                    <RowConstraints percentHeight="50"/>
+                </rowConstraints>
+                <columnConstraints>
+                    <ColumnConstraints prefWidth="200"/>
+                </columnConstraints>
+                <padding>
+                    <Insets top="10" bottom="10" left="10" right="10"/>
+                </padding>
+
+                <VBox GridPane.columnIndex="0" GridPane.rowIndex="0" styleClass="kontejner">
+                    <Label text="Východy" styleClass="nadpis"/>
+                    <VBox fx:id="vychody" styleClass="text-maly"/>
+                </VBox>
+                <VBox  GridPane.columnIndex="0" GridPane.rowIndex="1" styleClass="kontejner">
+                    <Label text="Předměty" styleClass="nadpis"/>
+                    <VBox fx:id="seznamPredmetuVMistnosti"/>
+                </VBox>
+
+
+            </GridPane>
+        </left>
+    </BorderPane>
+
+
+
+
+</StackPane>
