--- a/src/main/resources/scena.fxml
+++ b/src/main/resources/scena.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -62,7 +63,9 @@
 
                 <VBox styleClass="kontejner" GridPane.columnIndex="0" GridPane.rowIndex="0">
                     <Label styleClass="nadpis" text="Předměty" />
+                    <ScrollPane fx:id="scrollPane" styleClass="edge-to-edge" >
                     <VBox fx:id="predmety" styleClass="text-maly" />
+                    </ScrollPane>
                 </VBox>
                 <VBox styleClass="kontejner" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <Label styleClass="nadpis" text="Batoh" />
